...
            if (!last)
              FilledButton.icon(
                onPressed: () => _pager.nextPage(
                    duration: const Duration(milliseconds: 250),
                    curve: Curves.easeOut),
                icon: const Icon(Icons.chevron_right),
                label: const Text('Далее'),
              ),
          ],
        ),
      ),
    );
  }
...
