...
      children: [
        image,
        Positioned(
          top: -6,
          right: -6,
          child: Tooltip(
            message: 'Удалить снимок',
            child: InkWell(
              onTap: () => actions.onDeleteShot!(shot),
              customBorder: const CircleBorder(),
              child: Container(
                width: 24,
                height: 24,
...
